<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.sendRequest.SendRequestFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@color/custom_background">

        <TextView
            android:id="@+id/screenTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/action_bar_send_request"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"/>
    </LinearLayout>

    <EditText
        android:id="@+id/focusTimeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/input_name_friend"/>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="130dp"
        app:backgroundTint="@color/button_color"
        android:text="@string/button_add" />

</LinearLayout>